<resources>
    <string name="app_name">InfinityNewDawn</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="daily_weighment_activities">Daily Weighment Activities</string>
    <string name="ragalla">Ragalla</string>
    <string name="daily_weighment_summary">Daily Weighment Summary</string>
    <string name="division">Division</string>
    <string name="field">Field Code/\nName</string>
    <string name="work_code">Work Code</string>
    <string name="gross_weight_n_kg">Gross \nWeight (kg)</string>
    <string name="deduction_n_kg">Deduction\n(kg)</string>
    <string name="extra_deduction_n_kg">Extra \nDeduction (kg)</string>
    <string name="net_weight_n_kg">Net Weight\n(kg)</string>
    <string name="totals">Totals</string>
    <string name="maturatalogo">MaturataLogo</string>
    <string name="work_type">Work Type</string>
    <string name="daily_sundry_activities">Daily Sundry Activities</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_internal_n_number">Employee Internal\nNumber</string>
    <string name="supervisor_name">Supervisor Name</string>
    <string name="task_status">Task Status</string>
    <string name="check_out">Check-Out</string>
    <string name="check_in">Check-In</string>
    <string name="weighment_kg">Weighment (kg)</string>
    <string name="sack_count">Sack Count</string>
    <string name="session_number">Session Number</string>
    <string name="bought_leaf">Bought Leaf Weighments</string>
    <string name="factory_weighments">Factory Weighments</string>
    <string name="rounded_net_nweight_kg">Rounded Net\nWeight (kg)</string>
    <string name="moisture_ndeduction">Moisture\nDeduction</string>
    <string name="containter_ndeducation">Containter\nDeducation</string>
    <string name="container_ncount">Container \nCount</string>
    <string name="checklist_plucking">Checklist / Plucking</string>
    <string name="employee_nno">Employee\nNo.</string>
    <string name="no">No.</string>
    <string name="first_weighment">First Weighment</string>
    <string name="last_weighment">Last Weighment</string>
    <string name="total">Total</string>
    <string name="field_no">Field No.</string>
    <string name="checklist_sundry">Checklist / Sundry</string>
    <string name="employee_number">Employee Number</string>
    <string name="description">Description</string>
    <string name="duration">Duration\n(hrs)</string>
    <string name="_1st_session">1st Session</string>
    <string name="_2nd_session">2nd Session</string>
    <string name="_3rd_session">3rd Session</string>
    <string name="_4th_session">4th Session</string>
    <string name="ref">Ref</string>
    <string name="plucking_sessions">Plucking Sessions</string>
    <string name="total_ndeductions_kg">Total\nDeductions (kg)</string>
    <string name="work_code_nname">Work Code/\nName</string>
    <string name="weighment_time">Weighment Time</string>
    <string name="_900">900</string>
    <string name="daily_f2f_weighments">Daily F2F Weighments</string>
    <string name="high_forest">High Forest</string>
</resources>