<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ChecklistSundryActivity"
    android:background="@drawable/screen_background"
    android:paddingVertical="10dp">

    <LinearLayout
        android:id="@+id/linear1_activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/rockeb"
                android:text="@string/checklist_sundry"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView_activity_checklist_sundry"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="30dp"
                    android:background="@color/white"
                    app:queryHint="Search"
                    />

                <TextView
                    android:id="@+id/txtDate_activity_checklist_sundry"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:layout_marginRight="30dp"
                    android:text=""
                    android:textSize="25sp"
                    android:background="@drawable/custom_ll_border"
                    android:padding="5dp"
                    />

                <ImageButton
                    android:id="@+id/btnFilter_checklist_sundry"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_baseline_filter"
                    android:background="#6e9f50"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:weightSum="13"
            android:layout_marginHorizontal="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ref"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/field"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="Employee\nNo."
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/employee_name"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/work_type"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/work_code_nname"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/check_in"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/check_out"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/duration"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/supervisor_name"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text= "Work \nName"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="#FFF" android:layout_marginHorizontal="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCheckListSundry_activity_checklist_sundry"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.94"
            android:overScrollMode="never" android:layout_marginHorizontal="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="#FFF" android:layout_marginHorizontal="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginHorizontal="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btnBack_activity_checklist_sundry"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="#6e9f50"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/back"
                    app:tint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/btnDailyWeighmentRow_activity_checklist_sundry"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/daily_weighment_cropped"
                    android:background="#6e9f50"/>

                <ImageButton
                    android:id="@+id/btnDailySundryRow_activity_checklist_sundry"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/daily_sundry_cropped"
                    android:background="#6e9f50"/>

                <ImageButton
                    android:id="@+id/btnDailyF2FWeighmentRow_activity_checklist_sundry"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/daily_f2f_cropped"
                    android:background="#6e9f50"/>

                <ImageButton
                    android:id="@+id/btnBoughtLeafRow_activity_checklist_sundry"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/boughtleaf_cropped"
                    android:background="#6e9f50"/>

                <ImageButton

                    android:id="@+id/btnFactoryWeighmentRow_activity_checklist_sundry"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/factory_weighments_cropped"
                    android:background="#6e9f50"/>

                <ImageButton
                    android:id="@+id/btnChecklistSundryRow_activity_checklist_sundry"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/checklist_sundry_cropped"
                    android:background="#6e9f50"/>

                <ImageButton
                    android:id="@+id/btnChecklistPluckingRow_activity_checklist_sundry"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/checklist_plucking_cropped"
                    android:background="#6e9f50"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end">

                <ImageButton
                    android:id="@+id/imgbtnHome_activity_checklist_sundry"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="#6e9f50"
                    android:scaleType="fitCenter"
                    android:src="@drawable/home_button"
                    app:tint="@color/white" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <SlidingDrawer
        android:id="@+id/slidingDrawer_checklist_sundry"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:content="@+id/content"
        android:handle="@+id/handle"
        android:orientation="horizontal"
        android:elevation="5dp"
        android:layout_alignEnd="@+id/linear1_activity_main"
        >

        <!-- Button for the handle of SlidingDrawer -->
        <Button
            android:id="@id/handle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            />

        <!-- layout for the content of the SlidingDrawer -->
        <LinearLayout
            android:id="@id/content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@drawable/filterslider_background"
            android:padding="20dp"
            android:weightSum="10">

            <!-- DEFINE ALL YOUR CONTENT,WIDGETS HERE WHICH YOU WANT TO ADD IN SLIDING DRAWER LAYOUT. -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingTop="50dp"
                >

                <Spinner
                    android:id="@+id/spinnerDivisions_checklist_sundry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/spinner_background"
                    android:layout_marginBottom="30dp"
                    android:layout_marginHorizontal="10dp"
                    />

                <Spinner
                    android:id="@+id/spinnerSupervisors_checklist_sundry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/spinner_background"
                    android:layout_marginHorizontal="10dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <Button
                    android:id="@+id/btnSDok_checklist_sundry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OK"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/button_roundedbackground"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/btnSDdefault_checklist_sundry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DEFAULT"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/button_roundedbackground"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
        </LinearLayout>
    </SlidingDrawer>

</RelativeLayout>